rename yandex house logo images

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,7 +11,10 @@
 <body>
 <header>
   <nav>
-    <a href="#"><img src="../assets/Яндекс%20Дом.svg" alt="Яндекс Дом"></a>
+    <a href="#"><img srcset="../assets/Яндекс_Дом@1x.png 1x,
+                             ../assets/Яндекс_Дом@2x.png 2x"
+                     src="../assets/Яндекс_Дом.svg"
+                     alt="Яндекс Дом"></a>
     <ul>
       <li>Сводка</li>
       <li>Устройства</li>
