--- a/src/html/index.html
+++ b/src/html/index.html
@@ -13,7 +13,7 @@
   <nav>
     <a href="#"><img srcset="../assets/Яндекс_Дом@1x.png 1x,
                              ../assets/Яндекс_Дом@2x.png 2x"
-                     src="../assets/Яндекс_Дом.svg"
+                     src="../assets/Яндекс_Дом@1x.png"
                      alt="Яндекс Дом"></a>
     <ul>
       <li>Сводка</li>
