--- a/src/html/index.html
+++ b/src/html/index.html
@@ -60,8 +60,16 @@
         <div class="flex__justify_space-between">
           <div class="main-section__name">Избранные сценарии</div>
           <div class="main-section__pagination">
-            <img class="arrow_direction_left" src="../assets/Icons/arrow-left.svg" alt="<">
-            <img class="arrow_direction_right" src="../assets/Icons/arrow-left.svg" alt=">">
+            <img class="arrow arrow_direction_left"
+                 srcset="../assets/Icons_/Arrow_Right_/arrow@1x.png 1x,
+                         ../assets/Icons_/Arrow_Right_/arrow@2x.png 2x"
+                 src="../assets/Icons_/Arrow_Right_/arrow@1x.png"
+                 alt="<">
+            <img class="arrow arrow_direction_right"
+                 srcset="../assets/Icons_/Arrow_Right_/arrow@1x.png 1x,
+                         ../assets/Icons_/Arrow_Right_/arrow@2x.png 2x"
+                 src="../assets/Icons_/Arrow_Right_/arrow@1x.png"
+                 alt=">">
           </div>
         </div>
         <div>
