--- a/src/html/index.html
+++ b/src/html/index.html
@@ -28,7 +28,9 @@
     <div class="main-content__first-line">
 
       <section id="main" class="main-section">
-        <div class="main-section__name">Главное</div>
+        <div class="main-section__header">
+          <div class="section-header__name">Главное</div>
+        </div>
         <div class="main-widget">
           <div class="info-pane">
             <div class="info-pane__greetings">Привет, Геннадий!</div>
@@ -57,9 +59,9 @@
       </section>
 
       <section id="featured_scenarios" class="main-section">
-        <div class="flex__justify_space-between">
-          <div class="main-section__name">Избранные сценарии</div>
-          <div class="main-section__pagination">
+        <div class="main-section__header flex__justify_space-between">
+          <div class="section-header__name">Избранные сценарии</div>
+          <div class="section-header__pagination">
             <img class="arrow arrow_direction_left"
                  srcset="../assets/Icons_/Arrow_Right_/arrow@1x.png 1x,
                          ../assets/Icons_/Arrow_Right_/arrow@2x.png 2x"
@@ -90,7 +92,7 @@
 
     <section id="featured_devices" class="main-section">
       <div>
-        <div class="main-section__name">Избранные устройства</div>
+        <div class="section-header__name">Избранные устройства</div>
         <ul>
           <li>Все</li>
           <li>Кухня</li>
