rename icon to match name convention

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -45,9 +45,9 @@
                 <div class="whether-widget__place-name">За окном</div>
                 <div class="whether-widget__temperature">+19</div>
                 <img class="whether-widget__icon"
-                     srcset="../assets/cloud-drizzle.png 1x,
-                         ../assets/cloud-drizzle@2x.png 2x"
-                     src="../assets/cloud-drizzle.png"
+                     srcset="../assets/cloud-drizzle@1x.png 1x,
+                             ../assets/cloud-drizzle@2x.png 2x"
+                     src="../assets/cloud-drizzle@1x.png"
                      alt="cloudy and drizzle">
               </div>
             </div>
