--- a/src/html/index.html
+++ b/src/html/index.html
@@ -58,7 +58,7 @@
         </div>
       </section>
 
-      <section id="featured_scenarios" class="main-section">
+      <section id="featured-scenarios" class="main-section">
         <div class="main-section__header flex__justify_space-between">
           <div class="section-header__name">Избранные сценарии</div>
           <div class="section-header__pagination">
@@ -135,7 +135,7 @@
 
     </div>
 
-    <section id="featured_devices" class="main-section">
+    <section id="featured-devices" class="main-section">
       <div>
         <div class="section-header__name">Избранные устройства</div>
         <ul>
