--- a/src/html/index.html
+++ b/src/html/index.html
@@ -75,6 +75,7 @@
           </div>
         </div>
         <div class="scenarios-pane">
+          <!--
           <div class="house-item house-item_size_medium">
             <img class="house-item__icon"
                  srcset="../assets/icon_sun_2@1x.png 1x,
@@ -130,6 +131,8 @@
               <div class="house-item__name">Сделать пол тёплым во всей квартире</div>
             </div>
           </div>
+          -->
+
         </div>
       </section>
 
@@ -161,5 +164,6 @@
     <span class="footer__copyright">&copy;2001-2017 ООО &laquo;Яндекс&raquo;</span>
   </footer>
 </div>
+<script src="../js/app.js"></script>
 </body>
 </html>
