apply styles to featured devices section

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -139,31 +139,33 @@
     </div>
 
     <section id="featured-devices" class="main-section">
-      <div class="main-section__header">
-        <div>
-          <div class="section-header__name">Избранные устройства</div>
-          <ul class="filter-menu">
-            <li class="filter-menu__item filter-menu__item_selected_true">Все</li>
-            <li class="filter-menu__item ">Кухня</li>
-            <li class="filter-menu__item ">Зал</li>
-            <li class="filter-menu__item ">Лампочки</li>
-            <li class="filter-menu__item ">Камеры</li>
-          </ul>
-        </div>
-        <div class="pagination">
-          <img class="pagination__arrow arrow_direction_left"
-               srcset="../assets/Icons_/Arrow_Right_/arrow@1x.png 1x,
+      <div class="main-section__header main-section__header_margin_right">
+        <div class="flex__justify_space-between">
+          <div class="flex__justify_flex-start">
+            <div class="section-header__name section-header__name_margin_right">Избранные устройства</div>
+            <ul class="filter-menu">
+              <li class="filter-menu__item filter-menu__item_selected_true">Все</li>
+              <li class="filter-menu__item ">Кухня</li>
+              <li class="filter-menu__item ">Зал</li>
+              <li class="filter-menu__item ">Лампочки</li>
+              <li class="filter-menu__item ">Камеры</li>
+            </ul>
+          </div>
+          <div class="pagination">
+            <img class="pagination__arrow arrow_direction_left"
+                 srcset="../assets/Icons_/Arrow_Right_/arrow@1x.png 1x,
                          ../assets/Icons_/Arrow_Right_/arrow@2x.png 2x"
-               src="../assets/Icons_/Arrow_Right_/arrow@1x.png"
-               alt="<">
-          <img class="pagination__arrow arrow_direction_right"
-               srcset="../assets/Icons_/Arrow_Right_/arrow@1x.png 1x,
+                 src="../assets/Icons_/Arrow_Right_/arrow@1x.png"
+                 alt="<">
+            <img class="pagination__arrow arrow_direction_right"
+                 srcset="../assets/Icons_/Arrow_Right_/arrow@1x.png 1x,
                          ../assets/Icons_/Arrow_Right_/arrow@2x.png 2x"
-               src="../assets/Icons_/Arrow_Right_/arrow@1x.png"
-               alt=">">
+                 src="../assets/Icons_/Arrow_Right_/arrow@1x.png"
+                 alt=">">
+          </div>
         </div>
       </div>
-      <div>
+      <div class="devices-pane">
       </div>
     </section>
   </main>
@@ -175,7 +177,7 @@
       <li><a class="footer-menu__menu-item" href="#">Разработчикам</a></li>
       <li><a class="footer-menu__menu-item" href="#">Условия использования</a></li>
     </ul>
-    <span class="footer__copyright">&copy;2001-2017 ООО &laquo;Яндекс&raquo;</span>
+    <span class="footer__copyright">&copy;&thinsp;2001-2017 ООО &laquo;Яндекс&raquo;</span>
   </footer>
 </div>
 <script src="../js/app.js"></script>
