--- a/src/html/index.html
+++ b/src/html/index.html
@@ -144,11 +144,11 @@
           <div class="flex__justify_flex-start">
             <div class="section-header__name section-header__name_margin_right">Избранные устройства</div>
             <ul class="filter-menu">
-              <li class="filter-menu__item filter-menu__item_selected_true">Все</li>
-              <li class="filter-menu__item ">Кухня</li>
-              <li class="filter-menu__item ">Зал</li>
-              <li class="filter-menu__item ">Лампочки</li>
-              <li class="filter-menu__item ">Камеры</li>
+              <li class="filter-menu__item filter-menu__item_active_true">Все</li>
+              <li class="filter-menu__item filter-menu__item_active_false">Кухня</li>
+              <li class="filter-menu__item filter-menu__item_active_false">Зал</li>
+              <li class="filter-menu__item filter-menu__item_active_false">Лампочки</li>
+              <li class="filter-menu__item filter-menu__item_active_false">Камеры</li>
             </ul>
           </div>
           <div class="pagination">
