add horizontal scroll with buttons using jQuery

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Яндекс Дом</title>
   <link rel="stylesheet" href="../css/app.css">
+  <script src="../js/libs/jquery-3.3.1.js"></script>
 </head>
 <body>
 <div class="wrapper">
@@ -165,7 +166,7 @@
           </div>
         </div>
       </div>
-      <div class="devices-pane">
+      <div id="devices-pane" class="devices-pane">
       </div>
     </section>
   </main>
