--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,6 +8,7 @@
   <title>Яндекс Дом</title>
   <link rel="stylesheet" href="../css/app.css">
   <script src="../js/libs/jquery-3.3.1.js"></script>
+  <script src="../js/libs/pagination.js"></script>
 </head>
 <body>
 <div class="wrapper">
