add style for featured scenarios section for lesser screen size

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,7 +8,7 @@
   <title>Яндекс Дом</title>
   <link rel="stylesheet" href="../css/app.css">
   <script src="../js/libs/jquery-3.3.1.js"></script>
-  <script src="../js/libs/pagination.js"></script>
+  <script src="../js/libs/cta.js"></script>
 </head>
 <body>
 <div class="wrapper">
@@ -61,7 +61,7 @@
       </section>
 
       <section id="featured-scenarios" class="main-section">
-        <div class="main-section__header flex__justify_space-between">
+        <div class="main-section__header scenarios-header">
           <div class="section-header__name">Избранные сценарии</div>
           <div class="pagination">
             <img class="pagination__arrow arrow_direction_left"
