add dropdown menu in lesser screen sizes

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -87,12 +87,27 @@
         <div class="flex__justify_space-between">
           <div class="flex__justify_flex-start">
             <div class="section-header__name section-header__name_margin_right">Избранные устройства</div>
-            <ul class="filter-menu">
-              <li class="filter-menu__item filter-menu__item_active_true">Все</li>
-              <li class="filter-menu__item filter-menu__item_active_false">Кухня</li>
-              <li class="filter-menu__item filter-menu__item_active_false">Зал</li>
-              <li class="filter-menu__item filter-menu__item_active_false">Лампочки</li>
-              <li class="filter-menu__item filter-menu__item_active_false">Камеры</li>
+            <ul class="filter-menu-buttons">
+              <li class="filter-menu-buttons__item filter-menu-buttons__item_active_true">Все</li>
+              <li class="filter-menu-buttons__item filter-menu-buttons__item_active_false">Кухня</li>
+              <li class="filter-menu-buttons__item filter-menu-buttons__item_active_false">Зал</li>
+              <li class="filter-menu-buttons__item filter-menu-buttons__item_active_false">Лампочки</li>
+              <li class="filter-menu-buttons__item filter-menu-buttons__item_active_false">Камеры</li>
+            </ul>
+          </div>
+          <div class="filter-menu-dropdown">
+            <div class="filter-menu-dropdown__button dropdown-button">
+              <span class="dropdown-button__name">Все</span>
+              <img class="dropdown-button__arrow"
+                   srcset="../assets/Icons_/Arrow_Down_/arrow@1x.png 1x,
+                         ../assets/Icons_/Arrow_Down_/arrow@2x.png 2x"
+                   src="../assets/Icons_/Arrow_Down_/arrow@1x.png" alt="&darr;"></div>
+            <ul class="filter-menu-dropdown__content">
+              <li class="filter-menu-dropdown__item">Все</li>
+              <li class="filter-menu-dropdown__item">Кухня</li>
+              <li class="filter-menu-dropdown__item">Зал</li>
+              <li class="filter-menu-dropdown__item">Лампочки</li>
+              <li class="filter-menu-dropdown__item">Камеры</li>
             </ul>
           </div>
           <div class="pagination">
