--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,9 +6,10 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Яндекс Дом</title>
-  <link rel="stylesheet" href="../css/app.css">
-  <script src="../js/libs/jquery-3.3.1.js"></script>
-  <script src="../js/libs/cta.js"></script>
+  <!--<link rel="stylesheet" href="../css/style.css">-->
+  <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.chunks.style.css %>">
+  <!--<script src="../js/libs/jquery-3.3.1.js"></script>-->
+  <!--<script src="../js/libs/cta.js"></script>-->
 </head>
 <body>
 <div class="wrapper">
@@ -139,6 +140,7 @@
     <span class="footer__copyright">&copy;&thinsp;2001-2017 ООО &laquo;Яндекс&raquo;</span>
   </footer>
 </div>
-<script src="../js/app.js"></script>
+<!--<script src="../js/app.js"></script>-->
+<script src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
 </body>
 </html>
