--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,135 +11,135 @@
   <!--<script src="../js/libs/cta.js"></script>-->
 </head>
 <body>
-<div class="wrapper">
-  <header class="header">
-    <div class="header__logo">
-      <img
-         srcset="../assets/Яндекс_Дом@1x.png 1x,
-                 ../assets/Яндекс_Дом@2x.png 2x"
-         src="../assets/Яндекс_Дом@1x.png"
-         alt="Яндекс Дом">
-    </div>
-    <div class="header__menu-toggle">
-      <img srcset="../assets/icon_list_m@1x.png 1x,
-                   ../assets/icon_list_m@2x.png 2x"
-           src="../assets/icon_list_m@1x.png"
-           alt="Menu">
-    </div>
-    <nav>
-      <ul class="header__header-menu">
-        <li class="header-menu__menu-item header-menu__menu-item_active_true">Сводка</li>
-        <li class="header-menu__menu-item header-menu__menu-item_active_false">Устройства</li>
-        <li class="header-menu__menu-item header-menu__menu-item_active_false">Сценарии</li>
-      </ul>
-    </nav>
-  </header>
+<div>
+  <div class="wrapper">
+    <header class="header">
+      <div class="header__logo">
+        <img srcset="../assets/Яндекс_Дом@1x.png 1x,
+                     ../assets/Яндекс_Дом@2x.png 2x"
+             src="../assets/Яндекс_Дом@1x.png"
+             alt="Яндекс Дом">
+      </div>
+      <div class="header__menu-toggle">
+        <img srcset="../assets/icon_list_m@1x.png 1x,
+                     ../assets/icon_list_m@2x.png 2x"
+             src="../assets/icon_list_m@1x.png"
+             alt="Menu">
+      </div>
+      <nav>
+        <ul class="header__header-menu">
+          <li class="header-menu__menu-item header-menu__menu-item_active_true">Сводка</li>
+          <li class="header-menu__menu-item header-menu__menu-item_active_false">Устройства</li>
+          <li class="header-menu__menu-item header-menu__menu-item_active_false">Сценарии</li>
+        </ul>
+      </nav>
+    </header>
 
-  <main class="main-content">
+    <main class="main-content">
 
-    <div class="main-content__first-line">
+      <div class="main-content__first-line">
 
-      <section id="main" class="main-section">
-        <div class="main-section__header">
-          <div class="section-header__name">Главное</div>
-        </div>
-        <div class="main-widget">
-          <div class="info-pane">
-            <div class="info-pane__greetings">Привет, Геннадий!</div>
-            <div class="info-pane__status">Двери и окна закрыты, сигнализация включена.</div>
+        <section id="main" class="main-section">
+          <div class="main-section__header">
+            <div class="section-header__name">Главное</div>
+          </div>
+          <div class="main-widget">
+            <div class="info-pane">
+              <div class="info-pane__greetings">Привет, Геннадий!</div>
+              <div class="info-pane__status">Двери и окна закрыты, сигнализация включена.</div>
 
-            <div class="whether-widget">
-              <div class="whether-widget__whether-item">
-                <div class="whether-widget__place-name">Дома</div>
-                <div class="whether-widget__temperature">+23</div>
-              </div>
-              <div class="whether-widget__whether-item">
-                <div class="whether-widget__place-name">За окном</div>
-                <div class="whether-widget__temperature">+19</div>
-                <img class="whether-widget__icon"
-                     srcset="../assets/cloud-drizzle@1x.png 1x,
-                             ../assets/cloud-drizzle@2x.png 2x"
-                     src="../assets/cloud-drizzle@1x.png"
-                     alt="cloudy and drizzle">
+              <div class="whether-widget">
+                <div class="whether-widget__whether-item">
+                  <div class="whether-widget__place-name">Дома</div>
+                  <div class="whether-widget__temperature">+23</div>
+                </div>
+                <div class="whether-widget__whether-item">
+                  <div class="whether-widget__place-name">За окном</div>
+                  <div class="whether-widget__temperature">+19</div>
+                  <img class="whether-widget__icon"
+                       srcset="../assets/cloud-drizzle@1x.png 1x,
+                               ../assets/cloud-drizzle@2x.png 2x"
+                       src="../assets/cloud-drizzle@1x.png"
+                       alt="cloudy and drizzle">
+                </div>
               </div>
             </div>
-          </div>
-          <div class="schedule-pane">
+            <div class="schedule-pane">
 
+            </div>
           </div>
+        </section>
+
+        <section id="featured-scenarios" class="main-section">
+          <div class="main-section__header scenarios-header">
+            <div class="section-header__name">Избранные сценарии</div>
+            <div class="pagination">
+              <img class="pagination__arrow arrow_direction_left"
+                   srcset="../assets/Icons_/Arrow_Right_/arrow@1x.png 1x,
+                           ../assets/Icons_/Arrow_Right_/arrow@2x.png 2x"
+                   src="../assets/Icons_/Arrow_Right_/arrow@1x.png"
+                   alt="<">
+              <img class="pagination__arrow arrow_direction_right"
+                   srcset="../assets/Icons_/Arrow_Right_/arrow@1x.png 1x,
+                           ../assets/Icons_/Arrow_Right_/arrow@2x.png 2x"
+                   src="../assets/Icons_/Arrow_Right_/arrow@1x.png"
+                   alt=">">
+            </div>
+          </div>
+          <div class="scenarios-pane">
+          </div>
+        </section>
+
+      </div>
+
+      <section id="featured-devices" class="main-section">
+        <div class="main-section__header main-section__header_margin_right">
+          <div class="flex__justify_space-between">
+            <div class="flex__justify_flex-start">
+              <div class="section-header__name section-header__name_margin_right">Избранные устройства</div>
+              <ul class="filter-menu-buttons">
+                <li class="filter-menu-buttons__item filter-menu-buttons__item_active">Все</li>
+                <li class="filter-menu-buttons__item filter-menu-buttons__item_active_false">Кухня</li>
+                <li class="filter-menu-buttons__item filter-menu-buttons__item_active_false">Зал</li>
+                <li class="filter-menu-buttons__item filter-menu-buttons__item_active_false">Лампочки</li>
+                <li class="filter-menu-buttons__item filter-menu-buttons__item_active_false">Камеры</li>
+              </ul>
+            </div>
+            <div class="filter-menu-dropdown">
+              <div class="filter-menu-dropdown__button dropdown-button">
+                <span class="dropdown-button__name">Все</span>
+                <img class="dropdown-button__arrow"
+                     srcset="../assets/Icons_/Arrow_Down_/arrow@1x.png 1x,
+                           ../assets/Icons_/Arrow_Down_/arrow@2x.png 2x"
+                     src="../assets/Icons_/Arrow_Down_/arrow@1x.png" alt="&darr;"></div>
+              <ul class="filter-menu-dropdown__content">
+                <li class="filter-menu-dropdown__item">Все</li>
+                <li class="filter-menu-dropdown__item">Кухня</li>
+                <li class="filter-menu-dropdown__item">Зал</li>
+                <li class="filter-menu-dropdown__item">Лампочки</li>
+                <li class="filter-menu-dropdown__item">Камеры</li>
+              </ul>
+            </div>
+            <div class="pagination">
+              <img class="pagination__arrow arrow_direction_left"
+                   srcset="../assets/Icons_/Arrow_Right_/arrow@1x.png 1x,
+                           ../assets/Icons_/Arrow_Right_/arrow@2x.png 2x"
+                   src="../assets/Icons_/Arrow_Right_/arrow@1x.png"
+                   alt="<">
+              <img class="pagination__arrow arrow_direction_right"
+                   srcset="../assets/Icons_/Arrow_Right_/arrow@1x.png 1x,
+                           ../assets/Icons_/Arrow_Right_/arrow@2x.png 2x"
+                   src="../assets/Icons_/Arrow_Right_/arrow@1x.png"
+                   alt=">">
+            </div>
+          </div>
+        </div>
+        <div id="devices-pane" class="devices-pane">
         </div>
       </section>
+    </main>
 
-      <section id="featured-scenarios" class="main-section">
-        <div class="main-section__header scenarios-header">
-          <div class="section-header__name">Избранные сценарии</div>
-          <div class="pagination">
-            <img class="pagination__arrow arrow_direction_left"
-                 srcset="../assets/Icons_/Arrow_Right_/arrow@1x.png 1x,
-                         ../assets/Icons_/Arrow_Right_/arrow@2x.png 2x"
-                 src="../assets/Icons_/Arrow_Right_/arrow@1x.png"
-                 alt="<">
-            <img class="pagination__arrow arrow_direction_right"
-                 srcset="../assets/Icons_/Arrow_Right_/arrow@1x.png 1x,
-                         ../assets/Icons_/Arrow_Right_/arrow@2x.png 2x"
-                 src="../assets/Icons_/Arrow_Right_/arrow@1x.png"
-                 alt=">">
-          </div>
-        </div>
-        <div class="scenarios-pane">
-        </div>
-      </section>
-
-    </div>
-
-    <section id="featured-devices" class="main-section">
-      <div class="main-section__header main-section__header_margin_right">
-        <div class="flex__justify_space-between">
-          <div class="flex__justify_flex-start">
-            <div class="section-header__name section-header__name_margin_right">Избранные устройства</div>
-            <ul class="filter-menu-buttons">
-              <li class="filter-menu-buttons__item filter-menu-buttons__item_active_true">Все</li>
-              <li class="filter-menu-buttons__item filter-menu-buttons__item_active_false">Кухня</li>
-              <li class="filter-menu-buttons__item filter-menu-buttons__item_active_false">Зал</li>
-              <li class="filter-menu-buttons__item filter-menu-buttons__item_active_false">Лампочки</li>
-              <li class="filter-menu-buttons__item filter-menu-buttons__item_active_false">Камеры</li>
-            </ul>
-          </div>
-          <div class="filter-menu-dropdown">
-            <div class="filter-menu-dropdown__button dropdown-button">
-              <span class="dropdown-button__name">Все</span>
-              <img class="dropdown-button__arrow"
-                   srcset="../assets/Icons_/Arrow_Down_/arrow@1x.png 1x,
-                         ../assets/Icons_/Arrow_Down_/arrow@2x.png 2x"
-                   src="../assets/Icons_/Arrow_Down_/arrow@1x.png" alt="&darr;"></div>
-            <ul class="filter-menu-dropdown__content">
-              <li class="filter-menu-dropdown__item">Все</li>
-              <li class="filter-menu-dropdown__item">Кухня</li>
-              <li class="filter-menu-dropdown__item">Зал</li>
-              <li class="filter-menu-dropdown__item">Лампочки</li>
-              <li class="filter-menu-dropdown__item">Камеры</li>
-            </ul>
-          </div>
-          <div class="pagination">
-            <img class="pagination__arrow arrow_direction_left"
-                 srcset="../assets/Icons_/Arrow_Right_/arrow@1x.png 1x,
-                         ../assets/Icons_/Arrow_Right_/arrow@2x.png 2x"
-                 src="../assets/Icons_/Arrow_Right_/arrow@1x.png"
-                 alt="<">
-            <img class="pagination__arrow arrow_direction_right"
-                 srcset="../assets/Icons_/Arrow_Right_/arrow@1x.png 1x,
-                         ../assets/Icons_/Arrow_Right_/arrow@2x.png 2x"
-                 src="../assets/Icons_/Arrow_Right_/arrow@1x.png"
-                 alt=">">
-          </div>
-        </div>
-      </div>
-      <div id="devices-pane" class="devices-pane">
-      </div>
-    </section>
-  </main>
-
-  <footer class="footer">
+    <footer class="footer">
     <ul class="footer__footer-menu">
       <li><a class="footer-menu__menu-item" href="#">Помощь</a></li>
       <li><a class="footer-menu__menu-item" href="#">Обратная связь</a></li>
@@ -148,38 +148,46 @@
     </ul>
     <span class="footer__copyright">&copy;&thinsp;2001-2017 ООО &laquo;Яндекс&raquo;</span>
   </footer>
+  </div>
 
-  <div>
+  <div class="muted-background popup-container-wrapper">
     <div class="popup-container">
-      <div class="popup-container__content device-regulator">
-        <div class="device-regulator__name">Xiaomi Yeelight LED Smart Bulb</div>
-        <div class="device-regulator__status">Включится в 17:00</div>
-        <div class="icon">
-          <img src="../assets/icon_sun@2x.png" alt="sun">
+      <div class="popup-container__content device-controller">
+
+        <div class="popup-container__header popup-header">
+          <div class="popup-header__text-description text-description">
+            <!--<div class="text-description__name">Xiaomi Yeelight LED Smart Bulb</div>-->
+            <div class="text-description__name">Elgato Eve Degree Connected</div>
+            <div class="text-description__info">Включится в 17:00</div>
+          </div>
+          <div class="popup-header__status device-status">
+            <div class="device-status__current-value">+23</div>
+            <img class="device-status__icon" src="../assets/icon_temperature_2@2x.png">
+          </div>
         </div>
-        <div class="device-regulator__menu">
-          <ul class="filter-menu-buttons">
-            <li class="filter-menu-buttons__item filter-menu-buttons__item_active_true">Вручную</li>
-            <li class="filter-menu-buttons__item filter-menu-buttons__item_active_false">Дневной свет</li>
-            <li class="filter-menu-buttons__item filter-menu-buttons__item_active_false">Вечерный свет</li>
-            <li class="filter-menu-buttons__item filter-menu-buttons__item_active_false">Рассвет</li>
+        <div class="device-controller__menu">
+          <ul class="mode-menu">
+            <li class="mode-menu__button mode-menu__button_highlighted">Вручную</li>
+            <li class="mode-menu__button">Дневной свет</li>
+            <li class="mode-menu__button">Вечерный свет</li>
+            <li class="mode-menu__button">Рассвет</li>
           </ul>
         </div>
-        <div class="device-regulator__controls">
-          <input type="range" min="1" max="100" value="50" class="device-regulator__slider" id="popup-slider">
-
-        </div>
-        <div class="popup-container__controls">
-          <button class="button_highlighted_true">Применить</button>
-          <button class="button_highlighted_false">Закрыть</button>
+        <div class="device-controller__controls">
+          <input type="range" min="-10" max="30" value="20" class="device-regulator__slider device-regulator__slider_type_temperature" id="controls-slider-temperature">
+          <input type="range" min="1" max="100" value="50" class="device-regulator__slider device-regulator__slider_type_light" id="controls-slider-light">
         </div>
       </div>
 
-      <div class="home-temperature"></div>
-      <div class="home-floor"></div>
+      <div class="popup-controls">
+        <button class="popup-controls__button popup-controls__button_highlighted">Применить</button>
+        <button class="popup-controls__button">Закрыть</button>
+      </div>
     </div>
   </div>
+
 </div>
+
 <script src="../js/app.js"></script>
 </body>
 </html>
