--- a/src/html/index.html
+++ b/src/html/index.html
@@ -153,33 +153,38 @@
 
   <div class="muted-background popup-container-wrapper">
     <div class="popup-container">
-      <div class="popup-container__content device-controller">
 
-        <div class="popup-container__header popup-header">
-          <div class="popup-header__text-description text-description">
+      <!--<div class="popup-container__content device-controller">-->
+
+        <!--<div class="popup-container__header popup-header">-->
+          <!--<div class="popup-header__text-description text-description">-->
             <!--<div class="text-description__name">Xiaomi Yeelight LED Smart Bulb</div>-->
-            <div class="text-description__name">Elgato Eve Degree Connected</div>
-            <div class="text-description__info">Включится в 17:00</div>
-          </div>
-          <div class="popup-header__status device-status">
-            <div class="device-status__current-value">+23</div>
-            <img class="device-status__icon" src="../assets/icon_temperature_2@2x.png">
-          </div>
-        </div>
-        <div class="device-controller__menu">
-          <ul class="mode-menu">
-            <li class="mode-menu__button mode-menu__button_highlighted">Вручную</li>
-            <li class="mode-menu__button">Дневной свет</li>
-            <li class="mode-menu__button">Вечерный свет</li>
-            <li class="mode-menu__button">Рассвет</li>
-          </ul>
-        </div>
-        <div class="device-controller__controls">
-          <input type="range" min="-10" max="30" value="20" class="device-regulator__slider device-regulator__slider_type_temperature" id="controls-slider-temperature">
-          <input type="range" min="1" max="100" value="50" class="device-regulator__slider device-regulator__slider_type_light" id="controls-slider-light">
-          <input type="text" value="23" class="device-regulator__knob">
-        </div>
-      </div>
+            <!--<div class="text-description__name">Xiaomi Warm Floor</div>-->
+            <!--<div class="text-description__name">Elgato Eve Degree Connected</div>-->
+            <!--<div class="text-description__info">Включится в 17:00</div>-->
+            <!--<div class="text-description__info">Включено</div>-->
+          <!--</div>-->
+          <!--<div class="popup-header__status device-status">-->
+            <!--<div class="device-status__current-value">+23</div>-->
+            <!--<img class="device-status__icon" src="../assets/icon_temperature_2@2x.png">-->
+          <!--</div>-->
+        <!--</div>-->
+        <!--<div class="device-controller__menu">-->
+          <!--<ul class="mode-menu">-->
+            <!--<li class="mode-menu__button mode-menu__button_highlighted">Вручную</li>-->
+            <!--<li class="mode-menu__button">Дневной свет</li>-->
+            <!--<li class="mode-menu__button">Вечерный свет</li>-->
+            <!--<li class="mode-menu__button">Рассвет</li>-->
+          <!--</ul>-->
+        <!--</div>-->
+        <!--<div class="device-controller__controls">-->
+          <!--<input type="range" min="-10" max="30" value="20" class="controls__slider controls__slider_type_temperature">-->
+          <!--<input type="range" min="1" max="100" value="50" class="controls__slider controls__slider_type_light">-->
+          <!--<div>-->
+            <!--<input type="text" value="23" class="controls__knob">-->
+          <!--</div>-->
+        <!--</div>-->
+      <!--</div>-->
 
       <div class="popup-controls">
         <button class="popup-controls__button popup-controls__button_highlighted">Применить</button>
