add scrolling with buttons in featured scenarios section in smaller layout

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -151,7 +151,7 @@
   </footer>
   </div>
 
-  <div class="muted-background popup-container-wrapper">
+  <div class="popup-container-wrapper muted-background" style="display: none">
     <div class="popup-container">
 
       <!--<div class="popup-container__content device-controller">-->
