--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,7 +6,7 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Яндекс Дом</title>
-  <link rel="stylesheet" href="../css/app.css">
+  <link rel="stylesheet" href="../css/style.css">
   <script src="../js/libs/jquery-3.3.1.js"></script>
   <script src="../js/libs/cta.min.js"></script>
   <script src="../js/libs/jquery.knob.js"></script>
@@ -151,8 +151,9 @@
   </footer>
   </div>
 
-  <div class="popup-container-wrapper muted-background" style="display: none">
-    <div class="popup-container">
+  <!-- class="muted-background" -->
+  <div class="popup-container-wrapper hidden">
+    <div class="popup-container transparent">
 
       <!--<div class="popup-container__content device-controller">-->
 
